CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ELSE()
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ENDIF()

INCLUDE (CheckIncludeFileCXX)
INCLUDE (CMakeDependentOption)

PROJECT(bson-cpp)

SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/Packages ${CMAKE_MODULE_PATH} )
ADD_DEFINITIONS("-Wno-deprecated -Wall -Wextra -Wno-reorder")

FIND_PACKAGE(Boost 1.46 COMPONENTS filesystem thread date_time system REQUIRED)

INCLUDE_DIRECTORIES(src lib . ${Boost_INCLUDE_DIRS})
LINK_LIBRARIES( ${Boost_LIBRARIES} pthread)

SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")

ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(test/unit)

# INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION include)
FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
FILE(GLOB HEADERS_UTIL "${CMAKE_CURRENT_SOURCE_DIR}/src/util/*.h")
FILE(GLOB HEADERS_LIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h")

MESSAGE(STATUS ${HEADERS})
# INSTALL(FILES libdakwak-config.cmake DESTINATION lib/${PROJECT_NAME})
INSTALL(FILES ${HEADERS} DESTINATION include/bson)
INSTALL(FILES ${HEADERS_UTIL} DESTINATION include/bson/util)
INSTALL(FILES ${HEADERS_LIB} DESTINATION include/bson/lib)
